# esp-idf-component-SDL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: build-example.yml  test-example.yml  test-screenshots.yml  upload-sdl-esp-idf-component.yml
examples/bubble/: CMakeLists.txt  README.md  sdkconfig.defaults.esp-box-3  sdkconfig.defaults.esp32_p4_function_ev_board  sdkconfig.defaults.esp32_s3_eye  sdkconfig.defaults.m5stack_core_s3
examples/bubble/main/: CMakeLists.txt  idf_component.yml
examples/conway/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32_p4_function_ev_board  sdkconfig.defaults.m5stack_tab5
examples/conway/main/: CMakeLists.txt  conway.c
examples/mandelbrot/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32_c3_lcdkit  sdkconfig.defaults.esp32_p4_function_ev  sdkconfig.defaults.esp_box_3  sdkconfig.defaults.m5stack_core_s3
examples/mandelbrot/main/: CMakeLists.txt  mandelbrot.c
examples/snow/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32_c3_lcdkit  sdkconfig.defaults.esp32_p4_function_ev_board  sdkconfig.defaults.esp32_s3_korvo_2  sdkconfig.defaults.esp32_s3_lcd_ev  sdkconfig.defaults.m5_atom_s3
examples/snow/main/: idf_component.yml  snow.c
include/SDL3/: SDL_esp-idf.h
include/build_config/: SDL_build_config_esp_idf.h
sdl/: CMakeLists.txt  README.md  idf_component.yml
sdl/examples/bubble/: sdkconfig.defaults.esp32_c6_devkit  sdkconfig.defaults.esp_bsp_devkit  sdkconfig.defaults.m5stack_tab5
sdl/examples/bubble/main/: bubble.c
sdl/examples/conway/: sdkconfig.defaults.esp_bsp_generic
sdl/examples/mandelbrot/: CMakeLists.txt  sdkconfig.defaults.esp32_c3_lcdkit  sdkconfig.defaults.esp32_p4_function_ev_board
sdl/examples/mandelbrot/main/: idf_component.yml
sdl/examples/snow/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32_p4_function_ev_board  sdkconfig.defaults.esp32_s3_lcd_ev_board  sdkconfig.defaults.m5_atom_s3
sdl/examples/snow/boards/: esp-box-3.cfg  esp32_c3_lcdkit.cfg
sdl/examples/snow/main/: CMakeLists.txt
sdl/include/SDL3/: SDL_esp-idf.h
sdl/include/build_config/: SDL_build_config.h  SDL_build_config_esp_idf.h
sdl/src/: SDL_assert.c
sdl/src/stdlib/: SDL_malloc.c  SDL_stdlib.c
sdl/src/thread/pthread/: SDL_systhread_c.h  pthread_espidf.c
sdl/src/timer/esp-idf/: SDL_systimer.c
sdl/src/video/esp-idf/: SDL_espidfevents.c  SDL_espidfframebuffer.c  SDL_espidfshared.h  SDL_espidftouch.c  SDL_espidfvideo.c
src/libm/: math_private.h
src/stdlib/: SDL_stdlib.c
src/thread/esp-idf/: SDL_systhread.c
src/thread/pthread/: SDL_systhread.c  SDL_systhread_c.h  pthread_espidf.c
src/timer/esp-idf/: SDL_systimer.c
src/video/: SDL_sysvideo.h  SDL_video.c
src/video/esp-idf/: SDL_espidfevents.c  SDL_espidfframebuffer.c  SDL_espidfframebuffer.h  SDL_espidftouch.c  SDL_espidfvideo.c  SDL_espidfvideo.h
